--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
   mysql:
     image: mysql
-    container_name: app-sales-mysql
+    container_name: sales-app-mysql
     environment:
       - MYSQL_ROOT_PASSWORD=root
     networks:
@@ -12,13 +12,22 @@ services:
       - "3306:3306"
     restart: always
 
+  frontend:
+    container_name: sales-app-frontend
+    hostname: app
+    build:
+      context: ./app-sales-frontend
+    ports:
+      - "8081:8080"
+    restart: always
+
   app:
-    container_name: sales-app
+    container_name: sales-app-backend
     hostname: app
     build:
       context: ./
     environment:
-      - DB_HOST=app-sales-mysql
+      - DB_HOST=sales-app-mysql
       - DB_USER=root
       - DB_PASSWORD=root
     ports:
